After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 708183 - Tabbing to off-screen items should cause those items to be automatically scrolled into view
Tabbing to off-screen items should cause those items to be automatically scro...
Status: RESOLVED FIXED
Product: gnome-software
Classification: Applications
Component: General
unspecified
Other Linux
: Normal normal
: ---
Assigned To: GNOME Software maintainer(s)
GNOME Software maintainer(s)
Depends on:
Blocks:
 
 
Reported: 2013-09-16 19:14 UTC by Joanmarie Diggs (IRC: joanie)
Modified: 2013-09-17 23:56 UTC
See Also:
GNOME target: ---
GNOME version: ---



Description Joanmarie Diggs (IRC: joanie) 2013-09-16 19:14:39 UTC
Steps to reproduce:
1. Launch gnome-software with sample data
2. Unmaximize the window and Tab to the Featured item
3. Tab down through the Picks and Categories

Expected result: The currently-focused item would always be visible on screen

Actual result: Once you Tab down past what was at the bottom of the window in step 2, focus keeps changing but the focused items remain off screen until you scroll the window with the mouse.