Keep focus widgets on screen

Use focus vadjustment functionality in GTK+ to ensure that all
out scrolled windows keep the focus widget on screen.

https://bugzilla.gnome.org/show_bug.cgi?id=708183